# kiddox-notification-backend

./: .gitignore  Dockerfile  README.md  env.example  pyproject.toml
app/: config.py  main.py
app/middleware/: __init__.py  logging.py
app/models/: __init__.py
app/routes/: __init__.py  health.py
